browser window too small overlay plus some other fixes

--- a/webapp/src/react/browser-compatible/components/card/styles/card.scss
+++ b/webapp/src/react/browser-compatible/components/card/styles/card.scss
@@ -26,6 +26,7 @@
 @media (max-width: 600px) {
   .card-wrapper {
     padding-top: 0;
+    background-color: white;
   }
 
   .card-wrapper .card {
